--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 
     <header class="bg-[#F8D57E]">
       <div class="container">
-        <nav
-          class="flex justify-center items-center max-h-[100px] pt-5 tablet:space-x-96"
-        >
+        <nav>
+        <div class="flex justify-between items-center">
+          <div>
           <img src="./images/Logo.png" alt="" />
-          <div class="hidden tablet:flex gap-4 justify-center items-center p-2">
-            <a href="" class="hidden text-[#009379] font-semibold tablet:flex bg-inherit">Contact</a>
-            <button class="btn hidden desktop:flex">How it works</button>
-            <button class="flex  bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] hover:text-[#009379] font-semibold 	">
+        </div>
+          <div class="flex gap-4 justify-center items-center p-2">
+            <a href="" class="hidden desktop:flex text-[#009379] font-semibold bg-inherit">Contact</a>
+            <button class="hidden desktop:flex bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] hover:text-[#009379] font-semibold">How it works</button>
+            <button class="flex  bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] hover:text-[#009379] font-semibold">
               <img
                 class="mr-2 mx"
                 src="./images/RocketLaunch.svg"
@@ -24,6 +25,7 @@
               />Get Started
             </button>
           </div>
+        </div>
         </nav>
       </div>
     </header>
@@ -42,7 +44,7 @@
                 <a class="underline text-blue-500" href="asfsdfds">Anima's</a>
                 Landing Page UI kit for Figma. No code required!
               </p>
-              <div class=" flex flex-col text-center items-center  p-4 rounded-lg tablet:flex-row p 4 gap-10 ">
+              <div class=" flex gap-4 justify-center items-center p-2 ">
                 <button class="flex  bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] hover:text-[#009379] font-semibold 	">
                   <img
                     class="mr-2 mx"
@@ -54,7 +56,7 @@
             </div>
 
             <div
-              class="justify-center items-center mt-[40px] tablet:mt-[120px]"
+              class="justify-center items-center mt-[40px] tablet:mt-[120px]" 
             >
               <img
                 class="block justify-center items-center w-[100%]"
@@ -72,30 +74,172 @@
           <p class="text-center pb-4">Explore our portfolio and see the latest and greatest projects that we've brought to life.</p>
           <div class="justify-center tablet:grid grid-cols-3 gap-[30px] mb-[100px]">
 
-            <div class="justify-center items-center place-items-center  rounded-b-lg bg-[#fff]">
-              <img class="mx-auto pt-9" src="./images/Image Placeholder 1.png" alt="" />
+            <div class="justify-center items-center place-items-center  rounded-[18px] bg-[#fff]">
+              <img class="mx-auto " src="./images/Image Placeholder 1.png" alt="" />
               <h4 class="font-bold text-[21] text-center  pt-2 pb-2 pl-[16px] tablet:text-left">
                 Project Title
               </h4>
               <p class="text-center mb-3 pl-[16px] tablet:text-left">Short Description</p>
-              <p class="text-center mb-3 pl-[16px] tablet:text-left">Category</p>
+              <p class="text-center mb-3 pb-6 pl-[16px] tablet:text-left">Category</p>
           </div>
-          <div class="justify-center items-center place-items-center  rounded-b-lg bg-[#fff]">
-            <img class="mx-auto pt-9" src="./images/Image Placeholder 1.png" alt="" />
+          <div class="justify-center items-center place-items-center  rounded-[18px] bg-[#fff]">
+            <img class="mx-auto " src="./images/Image Placeholder 1.png" alt="" />
             <h4 class="font-bold text-[21] text-center  pt-2 pb-2 pl-[16px] tablet:text-left">
               Project Title
             </h4>
             <p class="text-center mb-3 pl-[16px] tablet:text-left">Short Description</p>
-            <p class="text-center mb-3 pl-[16px] tablet:text-left">Category</p>
+            <p class="text-center mb-3 pb-6 pl-[16px] tablet:text-left">Category</p>
         </div>
-        <div class="justify-center items-center place-items-center  rounded-b-lg bg-[#fff]">
-          <img class="mx-auto pt-9" src="./images/Image Placeholder 1.png" alt="" />
+        <div class="justify-center items-center place-items-center  rounded-[18px] bg-[#fff]">
+          <img class="mx-auto " src="./images/Image Placeholder 1.png" alt="" />
           <h4 class="font-bold text-[21] text-center  pt-2 pb-2 pl-[16px] tablet:text-left">
             Project Title
           </h4>
           <p class="text-center mb-3 pl-[16px] tablet:text-left">Short Description</p>
-          <p class="text-center mb-3 pl-[16px] tablet:text-left">Category</p>
+          <p class="text-center mb-3 pb-6 pl-[16px] tablet:text-left">Category</p>
+        </div>
+        </div>
       </div>
+    </section>  
+
+    <Section class="bg-[#F8D57E]">
+      <div class="container">
+        <h2 class="text-center text-[38px] pt-[120px]">Real Stories from Satisfied Customers</h2>
+        <p class="text-center text-[#2D2D2D]">See how our landing page ui kit is making an impact.</p>
+      <div class="desktop:flex  justify-center items-center gap-3 pt-8 rounded-lg pb-[120px]">
+        <div class="flex text-center gap-4  mb-[30px]  bg-white 	rounded-lg p-[30px] desktop:w-1/2">
+        <div class="w-2/5 ">
+          <img class="mx-auto" src="./images/Photo.png" alt="rasm yoq">
+          <h1 class="font-semibold">Lauren M.</h1>
+          <p>UI Designer @Boo</p>
+        </div>  
+        <div class="w-3/5 pt-5 text-left"> 
+            <img class="pb-3" src="./images/Star Rating.png" alt="">
+            <p>"Anima’s Landing Page UI Kit has become a staple in my design toolkit. This kit has everything I need to get the job done quickly and efficiently."</p>
+        </div> 
+        </div>
+        <div class="flex text-center gap-4  mb-[30px]  bg-white 	rounded-lg p-[30px] desktop:w-1/2">
+          <div class="w-2/5 ">
+            <img class="mx-auto" src="./images/Photo (1).png" alt="rasm yoq">
+            <h1 class="font-semibold">David B.</h1>
+            <p>UI Designer @Boo</p>
+          </div>  
+          <div class="w-3/5 pt-5 text-left">
+              <img class="pb-3" src="./images/Star Rating.png" alt="">
+              <p>"Anima’s Landing Page UI Kit has become a staple in my design toolkit. This kit has everything I need to get the job done quickly and efficiently."</p>
+            </div> 
+          </div>
+       </div>
+    </Section>
+
+    <section>
+      <div class="container">
+        <h2 class="pt-[120px] text-center font-bold text-[38px]">Meet our team</h2>
+        <p class="text-center text-[#2D2D2D]">Get to know the faces behind the scenes and learn about the values that drive us.</p>
+        <div class="desktop:grid grid-cols-3 gap-[30px] mt-9">
+      <div class="text-center pt-6 bg-white rounded-lg px-6">
+        <img class="mx-auto" src="./images/Profile Image Placeholder 2.png" alt="">
+        <h4 class="font-semibold">Sarah K.</h4>
+        <p>Lead Designer</p>
+        <br><br>
+        <p>With a passion for color and a love for clean lines, Sarah brings all our wildest design dreams to life.</p>
+      <div class="grid grid-cols-3 text-[#009379] pb-6 mt-4 mb-6">
+        <span><a href="https://x.com/">Tvitter</a></span>
+        <span><a href="https://dribbble.com/">dribbble</a></span>
+        <span><a href="https://www.linkedin.com/">Linkedin</a></span>
+      </div>
+      </div>
+      <div class="text-center pt-6 bg-white rounded-lg px-6">
+        <img class="mx-auto" src="./images/Profile Image Placeholder 2 (1).png" alt="">
+        <h4 class="font-semibold">Michael L.</h4>
+        <p>Lead Designer</p>
+        <br><br>
+        <p>With a passion for color and a love for clean lines, Sarah brings all our wildest design dreams to life.</p>
+      <div class="grid grid-cols-3 text-[#009379] pb-6 mt-4 mb-6">
+        <span><a href="https://x.com/">Tvitter</a></span>
+       <span><a href="https://dribbble.com/">dribbble</a></span>
+        <span><a href="https://www.linkedin.com/">Linkedin</a></span>
+      </div>
+      </div>
+      <div class="text-center pt-6 bg-white rounded-lg px-6">
+        <img class="mx-auto" src="./images/Profile Image Placeholder 2 (3).png" alt="">
+      <h4 class="font-semibold">Lauren M.</h4>
+        <p>Lead Designer</p>
+        <br><br>
+        <p>With a passion for color and a love for clean lines, Sarah brings all our wildest design dreams to life.</p>
+      <div class="grid grid-cols-3 text-[#009379] pb-6 mt-4 mb-6">
+          <span><a href="https://x.com/">Tvitter</a></span>
+          <span><a href="https://dribbble.com/">dribbble</a></span>
+          <span><a href="https://www.linkedin.com/">Linkedin</a></span>
+      </div>
+      </div>
+      </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <h2 class="pt-[120px] text-center font-bold text-[38px]">Meet our team</h2>
+        <p class="text-center text-[#2D2D2D]">Get to know the faces behind the scenes and learn about the values that drive us.</p>
+        
+        <div class="flex justify-between  mt-[80px] mb-[80px] cursor-pointer">
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+      </div>
+      <div class="flex justify-between mx-[50px] mt-[80px] mb-[80px] cursor-pointer">
+        <span class=""><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+      </div>
+      <div class="flex justify-between mx-[150px] mt-[80px] mb-[80px] gap-4 cursor-pointer">
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+        <span><img class="mx-auto" src="./images/itegrations-logo 1.png" alt=""></span>
+      </div>
+      <button class="btn">View All Integrations</button>
+      </div>
+    </section>
+
+    <section class="bg-[#F8D57E]">
+      <div class="container">
+        <div class="justify-center items-center text-center mt-[100px]">
+        <h2 class="text-[50px] font-bold pt-[60px] pb-[20px]">Get Landing Page UI Kit Today!</h2>
+        <p>Break Figma limits and explore the endless possibilities with Anima.</p>
+        <div class="flex flex-col justify-center items-center p-[40px]">
+        <button class="flex bg-[#009379] hover:bg-white transition duration-1000 p-4 px-11 rounded-xl text-[white] hover:text-[#009379] font-semibold">
+          <img
+            class="mr-2 items-center mx-auto"
+            src="./images/RocketLaunch.svg"
+            alt=""
+          />Get Started
+        </button>
+      </div>
+        <span><img class="mx-auto" src="./images/Mockup.png" alt=""></span>
+      </div>
+    </div>
+    </section>
+
+    <footer class="bg-[#2D2D2D]">
+      <div class="container">
+        <div class="flex justify-between mx-4 items-center mt- ">
+          <div class="">
+            <p class="text-white text-[12px] ">© 2023 Anima’s Landing Page Ui Kit. </p>
+          </div>
+          <div class="cursor-pointer">
+            <img class="p-[4px]" src="./images/Social Links.png" alt="">
+          </div>
+
+        </div>
+      </div>
+    </footer>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
