--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <a class="underline text-blue-500" href="asfsdfds">Anima's</a>
                 Landing Page UI kit for Figma. No code required!
               </p>
-              <div class=" flex gap-4 justify-center items-center p-2 ">
-                <button class="flex  bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] hover:text-[#009379] font-semibold 	">
+              <div class="flex flex-col tablet:flex-row justify-center gap-4 items-center p-2">
+                <button class="flex bg-[#009379] hover:bg-white transition duration-1000  p-4 px-11 rounded-xl  justify-items-center items-center text-[white] ext-hover:t[#009379] font-semibold">
                   <img
                     class="mr-2 mx"
                     src="./images/RocketLaunch.svg"
                     alt=""
                   />Get Started
-                <button class="btn inline-block">How it works</button>
+                <button class="btn ">How it works</button>
               </div>
             </div>
 
